// Copyright 2020 ADVANCA PTE. LTD.

// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at

//     http://www.apache.org/licenses/LICENSE-2.0

// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package worker;

service Storage {
  rpc Send(EncryptedRequest) returns (EncryptedResponse) {}
  // used for testing
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc Set(SetRequest) returns (SetResponse) {}
}

message EncryptedRequest {
  bytes payload = 1;
}

enum Privacy {
  ENCRYPTION = 0;
  SQRTORAM = 1;
}

message PlainRequest {
  oneof Request {
    GetRequest get_request = 1;
    SetRequest set_request = 2;
  };
  Privacy privacy = 3;
}

message EncryptedResponse {
  bytes payload = 1;
}

message PlainResponse {
  oneof Response {
    GetResponse get_response = 1;
    SetResponse set_response = 2;
  }
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  string message = 1;
  string value = 2; 
}

message SetRequest {
  string key = 1;
  string value = 2;
}

message SetResponse {
  string message = 1;
}